tests/declare_export/declare_export.exp
Error ----------------------------------------------------------------------------------------------------- const.js:3:1

Cannot reassign constant `c` [1]. [reassign-const]

   const.js:3:1
   3| c = "const"; // ERROR
      ^

References:
   const.js:1:22
   1| declare export const c: "const";
                           ^ [1]


Error ----------------------------------------------------------------------------------------------- es6modules.js:9:18

Cannot assign `DefaultA.numberValue1` to `a2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:9:18
   9| var a2: string = DefaultA.numberValue1; // Error: number ~> string
                       ^^^^^^^^^^^^^^^^^^^^^

References:
   A.js:1:24
   1| exports.numberValue1 = 42;
                             ^^ [1]
   es6modules.js:9:9
   9| var a2: string = DefaultA.numberValue1; // Error: number ~> string
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:14:18

Cannot assign `DefaultB.numberValue` to `b2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:14:18
   14| var b2: string = DefaultB.numberValue; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^

References:
   B.js:1:23
    1| exports.numberValue = 42;
                             ^^ [1]
   es6modules.js:14:9
   14| var b2: string = DefaultB.numberValue; // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:23:9

Cannot import `doesntExist1` because there is no `doesntExist1` export in `./CommonJS_Clobbering_Lit`. [missing-export]

   23| import {doesntExist1} from "./CommonJS_Clobbering_Lit"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:27:18

Cannot assign `numberValue1` to `c2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:27:18
   27| var c2: string = numberValue1; // Error: number ~> string
                        ^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:2:17
    2|   numberValue1: 1,
                       ^ [1]
   es6modules.js:27:9
   27| var c2: string = numberValue1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:31:18

Cannot assign `numVal1` to `d2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:31:18
   31| var d2: string = numVal1; // Error: number ~> string
                        ^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:3:17
    3|   numberValue2: 2,
                       ^ [1]
   es6modules.js:31:9
   31| var d2: string = numVal1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:35:18

Cannot assign `CJS_Clobb_Lit.numberValue3` to `e2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:35:18
   35| var e2: string = CJS_Clobb_Lit.numberValue3; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:4:17
    4|   numberValue3: 3,
                       ^ [1]
   es6modules.js:35:9
   35| var e2: string = CJS_Clobb_Lit.numberValue3; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:36:15

Cannot get `CJS_Clobb_Lit.doesntExist` because property `doesntExist` is missing in object literal [1]. [prop-missing]

   es6modules.js:36:15
   36| CJS_Clobb_Lit.doesntExist; // Error: doesntExist isn't a property
                     ^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:1:18
                        v
    1| module.exports = {
    2|   numberValue1: 1,
    3|   numberValue2: 2,
    4|   numberValue3: 3,
    5|   numberValue4: 4,
    6|   numberValue5: 5
    7| };
       ^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:41:26

Cannot get `CJS_Clobb_Lit_NS.default.default` because property `default` is missing in object literal [1].
[prop-missing]

   es6modules.js:41:26
   41| CJS_Clobb_Lit_NS.default.default; // Error: No 'default' property on the exported obj
                                ^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:1:18
                        v
    1| module.exports = {
    2|   numberValue1: 1,
    3|   numberValue2: 2,
    4|   numberValue3: 3,
    5|   numberValue4: 4,
    6|   numberValue5: 5
    7| };
       ^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:42:18

Cannot assign `CJS_Clobb_Lit_NS.numberValue4` to `f3` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:42:18
   42| var f3: string = CJS_Clobb_Lit_NS.numberValue4; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:5:17
    5|   numberValue4: 4,
                       ^ [1]
   es6modules.js:42:9
   42| var f3: string = CJS_Clobb_Lit_NS.numberValue4; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:43:18

Cannot assign `CJS_Clobb_Lit_NS.default.numberValue5` to `f4` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:43:18
   43| var f4: string = CJS_Clobb_Lit_NS.default.numberValue5; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:6:17
    6|   numberValue5: 5
                       ^ [1]
   es6modules.js:43:9
   43| var f4: string = CJS_Clobb_Lit_NS.default.numberValue5; // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:49:9

Cannot import `doesntExist2` because there is no `doesntExist2` export in `./CommonJS_Clobbering_Class`. Did you mean
`import doesntExist2 from "..."`? [missing-export]

   49| import {doesntExist2} from "./CommonJS_Clobbering_Class"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- es6modules.js:55:9

Cannot import `staticNumber1` because there is no `staticNumber1` export in `./CommonJS_Clobbering_Class`. Did you mean
`import staticNumber1 from "..."`? [missing-export]

   55| import {staticNumber1, baseProp, childProp} from "./CommonJS_Clobbering_Class"; // Error
               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:55:24

Cannot import `baseProp` because there is no `baseProp` export in `./CommonJS_Clobbering_Class`. Did you mean
`import baseProp from "..."`? [missing-export]

   55| import {staticNumber1, baseProp, childProp} from "./CommonJS_Clobbering_Class"; // Error
                              ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:55:34

Cannot import `childProp` because there is no `childProp` export in `./CommonJS_Clobbering_Class`. Did you mean
`import childProp from "..."`? [missing-export]

   55| import {staticNumber1, baseProp, childProp} from "./CommonJS_Clobbering_Class"; // Error
                                        ^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:59:23

Cannot get `(new CJS_Clobb_Class()).doesntExist` because property `doesntExist` is missing in `Test` [1]. [prop-missing]

   es6modules.js:59:23
   59| new CJS_Clobb_Class().doesntExist; // Error: Class has no `doesntExist` property
                             ^^^^^^^^^^^

References:
   es6modules.js:59:1
   59| new CJS_Clobb_Class().doesntExist; // Error: Class has no `doesntExist` property
       ^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:61:18

Cannot assign `CJS_Clobb_Class.staticNumber2()` to `h2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:61:18
   61| var h2: string = CJS_Clobb_Class.staticNumber2(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:9:26
    9|   static staticNumber2():number { return 2; }
                                ^^^^^^ [1]
   es6modules.js:61:9
   61| var h2: string = CJS_Clobb_Class.staticNumber2(); // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:63:18

Cannot assign `(new CJS_Clobb_Class()).instNumber1()` to `h4` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:63:18
   63| var h4: string = new CJS_Clobb_Class().instNumber1(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:12:17
   12|   instNumber1():number { return 1; }
                       ^^^^^^ [1]
   es6modules.js:63:9
   63| var h4: string = new CJS_Clobb_Class().instNumber1(); // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:66:5

Cannot use `new` on module `./CommonJS_Clobbering_Class` [1]. Only classes can be constructed. [invalid-constructor]

   es6modules.js:66:5
   66| new CJS_Clobb_Class_NS(); // Error: Namespace object isn't constructable
           ^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:67:37

Cannot call `CJS_Clobb_Class_NS.staticNumber3` because property `staticNumber3` is missing in module
`./CommonJS_Clobbering_Class` [1]. [prop-missing]

   es6modules.js:67:37
   67| var i1: number = CJS_Clobb_Class_NS.staticNumber3(); // Error: Class statics not copied to Namespace object
                                           ^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:69:18

Cannot assign `(new CJS_Clobb_Class_NS.default()).instNumber2()` to `i3` because number [1] is incompatible with
string [2]. [incompatible-type]

   es6modules.js:69:18
   69| var i3: string = new CJS_Clobb_Class_NS.default().instNumber2(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:13:17
   13|   instNumber2():number { return 2; }
                       ^^^^^^ [1]
   es6modules.js:69:9
   69| var i3: string = new CJS_Clobb_Class_NS.default().instNumber2(); // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:75:9

Cannot import `doesntExist3` because there is no `doesntExist3` export in `./CommonJS_Named`. [missing-export]

   75| import {doesntExist3} from "./CommonJS_Named"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:79:18

Cannot assign `numberValue2` to `j2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:79:18
   79| var j2: string = numberValue2; // Error: number ~> string
                        ^^^^^^^^^^^^

References:
   CommonJS_Named.js:2:24
    2| exports.numberValue2 = 2;
                              ^ [1]
   es6modules.js:79:9
   79| var j2: string = numberValue2; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:83:18

Cannot assign `numVal3` to `k2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:83:18
   83| var k2: string = numVal3; // Error: number ~> string
                        ^^^^^^^

References:
   CommonJS_Named.js:3:24
    3| exports.numberValue3 = 3;
                              ^ [1]
   es6modules.js:83:9
   83| var k2: string = numVal3; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:87:18

Cannot assign `CJS_Named.numberValue1` to `l2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:87:18
   87| var l2: string = CJS_Named.numberValue1; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:1:24
    1| exports.numberValue1 = 1;
                              ^ [1]
   es6modules.js:87:9
   87| var l2: string = CJS_Named.numberValue1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:88:11

Cannot get `CJS_Named.doesntExist` because property `doesntExist` is missing in module `./CommonJS_Named` [1].
[prop-missing]

   es6modules.js:88:11
   88| CJS_Named.doesntExist; // Error: doesntExist isn't a property
                 ^^^^^^^^^^^

References:
   CommonJS_Named.js
   ^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:92:18

Cannot assign `CJS_Named_NS.default.numberValue4` to `m2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:92:18
   92| var m2: string = CJS_Named_NS.default.numberValue4; // Error: CommonJS_Named has no default export
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:4:24
    4| exports.numberValue4 = 4;
                              ^ [1]
   es6modules.js:92:9
   92| var m2: string = CJS_Named_NS.default.numberValue4; // Error: CommonJS_Named has no default export
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:93:18

Cannot assign `CJS_Named_NS.numberValue4` to `m3` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:93:18
   93| var m3: string = CJS_Named_NS.numberValue4; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:4:24
    4| exports.numberValue4 = 4;
                              ^ [1]
   es6modules.js:93:9
   93| var m3: string = CJS_Named_NS.numberValue4; // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:99:9

Cannot import `doesntExist4` because there is no `doesntExist4` export in `./ES6_Default_AnonFunction1`. Did you mean
`import doesntExist4 from "..."`? [missing-export]

   99| import {doesntExist4} from "./ES6_Default_AnonFunction1"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:103:18

Cannot assign `ES6_Def_AnonFunc1()` to `n2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:103:18
   103| var n2: string = ES6_Def_AnonFunc1(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonFunction1.js:1:30
     1| declare export default () => number;
                                     ^^^^^^ [1]
   es6modules.js:103:9
   103| var n2: string = ES6_Def_AnonFunc1(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:107:18

Cannot assign `ES6_Def_NamedFunc1()` to `o2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:107:18
   107| var o2: string = ES6_Def_NamedFunc1(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedFunction1.js:1:39
     1| declare export default function foo():number;
                                              ^^^^^^ [1]
   es6modules.js:107:9
   107| var o2: string = ES6_Def_NamedFunc1(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:115:18

Cannot assign `(new ES6_Def_NamedClass1()).givesANum()` to `q2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:115:18
   115| var q2: string = new ES6_Def_NamedClass1().givesANum(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedClass1.js:1:53
     1| declare export default class FooImpl { givesANum(): number; };
                                                            ^^^^^^ [1]
   es6modules.js:115:9
   115| var q2: string = new ES6_Def_NamedClass1().givesANum(); // Error: number ~> string
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:121:8

Cannot import a default export because there is no default export in `./ES6_Named1`. [missing-export]

   121| import doesntExist5 from "./ES6_Named1"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:125:18

Cannot assign `specifierNumber1_1` to `r2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:125:18
   125| var r2: string = specifierNumber1_1; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:1:26
     1| const specifierNumber1 = 1;
                                 ^ [1]
   es6modules.js:125:9
   125| var r2: string = specifierNumber1_1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:129:18

Cannot assign `specifierNumber2Renamed` to `s2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:129:18
   129| var s2: string = specifierNumber2Renamed; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:2:26
     2| const specifierNumber2 = 2;
                                 ^ [1]
   es6modules.js:129:9
   129| var s2: string = specifierNumber2Renamed; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:133:18

Cannot assign `specifierNumber3Renamed` to `t2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:133:18
   133| var t2: string = specifierNumber3Renamed; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:3:26
     3| const specifierNumber3 = 3;
                                 ^ [1]
   es6modules.js:133:9
   133| var t2: string = specifierNumber3Renamed; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:138:18

Cannot assign `groupedSpecifierNumber1` to `u3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:138:18
   138| var u3: string = groupedSpecifierNumber1; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:4:33
     4| const groupedSpecifierNumber1 = 1;
                                        ^ [1]
   es6modules.js:138:9
   138| var u3: string = groupedSpecifierNumber1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:139:18

Cannot assign `groupedSpecifierNumber2` to `u4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:139:18
   139| var u4: string = groupedSpecifierNumber2; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:5:33
     5| const groupedSpecifierNumber2 = 2;
                                        ^ [1]
   es6modules.js:139:9
   139| var u4: string = groupedSpecifierNumber2; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:143:18

Cannot assign `givesANumber()` to `v2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:143:18
   143| var v2: string = givesANumber(); // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:12:41
    12| declare export function givesANumber(): number;
                                                ^^^^^^ [1]
   es6modules.js:143:9
   143| var v2: string = givesANumber(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:147:18

Cannot assign `(new NumberGenerator()).givesANumber()` to `w2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:147:18
   147| var w2: string = new NumberGenerator().givesANumber(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:13:56
    13| declare export class NumberGenerator { givesANumber(): number; };
                                                               ^^^^^^ [1]
   es6modules.js:147:9
   147| var w2: string = new NumberGenerator().givesANumber(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:152:18

Cannot assign `varDeclNumber1` to `x3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:152:18
   152| var x3: string = varDeclNumber1; // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:15:36
    15| declare export var varDeclNumber1: number;
                                           ^^^^^^ [1]
   es6modules.js:152:9
   152| var x3: string = varDeclNumber1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:153:18

Cannot assign `varDeclNumber2` to `x4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:153:18
   153| var x4: string = varDeclNumber2; // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:16:36
    16| declare export var varDeclNumber2: number;
                                           ^^^^^^ [1]
   es6modules.js:153:9
   153| var x4: string = varDeclNumber2; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:157:19

Cannot assign `numberValue4` to `aa2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:157:19
   157| var aa2: string = numberValue4; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source1.js:1:34
     1| declare export var numberValue1: number;
                                         ^^^^^^ [1]
   es6modules.js:157:10
   157| var aa2: string = numberValue4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:161:19

Cannot assign `numberValue2_renamed` to `ab2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:161:19
   161| var ab2: string = numberValue2_renamed; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source1.js:2:34
     2| declare export var numberValue2: number;
                                         ^^^^^^ [1]
   es6modules.js:161:10
   161| var ab2: string = numberValue2_renamed; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:165:19

Cannot assign `numberValue5` to `ac2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:165:19
   165| var ac2: string = numberValue5; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source1.js:1:34
     1| declare export var numberValue1: number;
                                         ^^^^^^ [1]
   es6modules.js:165:10
   165| var ac2: string = numberValue5; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:171:40

Cannot get `require(...).doesntExist` because property `doesntExist` is missing in module
`./ES6_Default_AnonFunction2` [1]. [prop-missing]

   es6modules.js:171:40
   171| require('./ES6_Default_AnonFunction2').doesntExist; // Error: 'doesntExist' isn't an export
                                               ^^^^^^^^^^^

References:
   es6modules.js:171:1
   171| require('./ES6_Default_AnonFunction2').doesntExist; // Error: 'doesntExist' isn't an export
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- es6modules.js:175:19

Cannot assign `ES6_Def_AnonFunc2()` to `ad2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:175:19
   175| var ad2: string = ES6_Def_AnonFunc2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonFunction2.js:1:29
     1| declare export default () =>number;
                                    ^^^^^^ [1]
   es6modules.js:175:10
   175| var ad2: string = ES6_Def_AnonFunc2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:179:19

Cannot assign `ES6_Def_NamedFunc2()` to `ae2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:179:19
   179| var ae2: string = ES6_Def_NamedFunc2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedFunction2.js:1:39
     1| declare export default function foo():number;
                                              ^^^^^^ [1]
   es6modules.js:179:10
   179| var ae2: string = ES6_Def_NamedFunc2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:183:19

Cannot assign `(new ES6_Def_NamedClass2()).givesANum()` to `ag2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:183:19
   183| var ag2: string = new ES6_Def_NamedClass2().givesANum(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedClass2.js:1:49
     1| declare export default class Foo { givesANum(): number; };
                                                        ^^^^^^ [1]
   es6modules.js:183:10
   183| var ag2: string = new ES6_Def_NamedClass2().givesANum(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:191:19

Cannot assign `specifierNumber4` to `ah2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:191:19
   191| var ah2: string = specifierNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:1:26
     1| const specifierNumber4 = 1;
                                 ^ [1]
   es6modules.js:191:10
   191| var ah2: string = specifierNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:195:19

Cannot assign `specifierNumber5Renamed` to `ai2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:195:19
   195| var ai2: string = specifierNumber5Renamed; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:2:26
     2| const specifierNumber5 = 2;
                                 ^ [1]
   es6modules.js:195:10
   195| var ai2: string = specifierNumber5Renamed; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:201:19

Cannot assign `groupedSpecifierNumber3` to `aj3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:201:19
   201| var aj3: string = groupedSpecifierNumber3; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:3:33
     3| const groupedSpecifierNumber3 = 1;
                                        ^ [1]
   es6modules.js:201:10
   201| var aj3: string = groupedSpecifierNumber3; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:202:19

Cannot assign `groupedSpecifierNumber4` to `aj4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:202:19
   202| var aj4: string = groupedSpecifierNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:4:33
     4| const groupedSpecifierNumber4 = 2;
                                        ^ [1]
   es6modules.js:202:10
   202| var aj4: string = groupedSpecifierNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:206:19

Cannot assign `givesANumber2()` to `ak2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:206:19
   206| var ak2: string = givesANumber2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:10:42
    10| declare export function givesANumber2(): number;
                                                 ^^^^^^ [1]
   es6modules.js:206:10
   206| var ak2: string = givesANumber2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:210:19

Cannot assign `(new NumberGenerator2()).givesANumber()` to `al2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:210:19
   210| var al2: string = new NumberGenerator2().givesANumber(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:11:57
    11| declare export class NumberGenerator2 { givesANumber(): number; };
                                                                ^^^^^^ [1]
   es6modules.js:210:10
   210| var al2: string = new NumberGenerator2().givesANumber(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:216:19

Cannot assign `varDeclNumber3` to `am3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:216:19
   216| var am3: string = varDeclNumber3; // Error: number ~> string
                          ^^^^^^^^^^^^^^

References:
   ES6_Named2.js:13:36
    13| declare export var varDeclNumber3: number;
                                           ^^^^^^ [1]
   es6modules.js:216:10
   216| var am3: string = varDeclNumber3; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:217:19

Cannot assign `varDeclNumber4` to `am4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:217:19
   217| var am4: string = varDeclNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^

References:
   ES6_Named2.js:14:36
    14| declare export var varDeclNumber4: number;
                                           ^^^^^^ [1]
   es6modules.js:217:10
   217| var am4: string = varDeclNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:221:19

Cannot assign `numberValue6` to `ap2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:221:19
   221| var ap2: string = numberValue6; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source2.js:1:34
     1| declare export var numberValue1: number;
                                         ^^^^^^ [1]
   es6modules.js:221:10
   221| var ap2: string = numberValue6; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:225:19

Cannot assign `numberValue2_renamed2` to `aq2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:225:19
   225| var aq2: string = numberValue2_renamed2; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source2.js:2:34
     2| declare export var numberValue2: number;
                                         ^^^^^^ [1]
   es6modules.js:225:10
   225| var aq2: string = numberValue2_renamed2; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:229:19

Cannot assign `numberValue7` to `ar2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:229:19
   229| var ar2: string = numberValue7; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source2.js:1:34
     1| declare export var numberValue2: number;
                                         ^^^^^^ [1]
   es6modules.js:229:10
   229| var ar2: string = numberValue7; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:238:19

Cannot assign `defaultNum` to `as2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:238:19
   238| var as2: string = defaultNum; // Error: number ~> string
                          ^^^^^^^^^^

References:
   ES6_DefaultAndNamed.js:1:24
     1| declare export default number;
                               ^^^^^^ [1]
   es6modules.js:238:10
   238| var as2: string = defaultNum; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:241:19

Cannot assign `namedStr` to `as4` because string [1] is incompatible with number [2]. [incompatible-type]

   es6modules.js:241:19
   241| var as4: number = namedStr; // Error: string ~> number
                          ^^^^^^^^

References:
   ES6_DefaultAndNamed.js:2:25
     2| declare export var str: string;
                                ^^^^^^ [1]
   es6modules.js:241:10
   241| var as4: number = namedStr; // Error: string ~> number
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:252:8

Cannot import a default export because there is no default export in `./ES6_Named1`. Did you mean
`import {specifierNumber1} from "./ES6_Named1"`? [missing-export]

   252| import specifierNumber1 from "./ES6_Named1"; // Error: Did you mean `import {specifierNumber1} from ...`?
               ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:253:9

Cannot import `specifierNumber` because there is no `specifierNumber` export in `./ES6_Named1`. Did you mean
`specifierNumber1`? [missing-export]

   253| import {specifierNumber} from "./ES6_Named1"; // Error: Did you mean `specifierNumber1`?
                ^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:264:19

Cannot assign `numberValue8` to `at2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:264:19
   264| var at2: string = numberValue8; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source1.js:1:34
     1| declare export var numberValue1: number;
                                         ^^^^^^ [1]
   es6modules.js:264:10
   264| var at2: string = numberValue8; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:267:19

Cannot assign `numberValue9` to `at4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:267:19
   267| var at4: string = numberValue9; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source2.js:1:34
     1| declare export var numberValue2: number;
                                         ^^^^^^ [1]
   es6modules.js:267:10
   267| var at4: string = numberValue9; // Error: number ~> string
                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ import-let-const.js:5:2

Cannot cast `l` to empty because string literal `let` [1] is incompatible with empty [2]. [incompatible-cast]

   import-let-const.js:5:2
   5| (l: empty); // ERROR
       ^

References:
   let.js:1:23
   1| declare export let l: "let";
                            ^^^^^ [1]
   import-let-const.js:5:5
   5| (l: empty); // ERROR
          ^^^^^ [2]


Error ------------------------------------------------------------------------------------------ import-let-const.js:8:2

Cannot cast `c` to empty because string literal `const` [1] is incompatible with empty [2]. [incompatible-cast]

   import-let-const.js:8:2
   8| (c: empty); // ERROR
       ^

References:
   const.js:1:25
   1| declare export const c: "const";
                              ^^^^^^^ [1]
   import-let-const.js:8:5
   8| (c: empty); // ERROR
          ^^^^^ [2]



Found 68 errors
